test/spec_vectors/func/fail/module_64.wat
(module (func $type-break-nested-void-vs-nums (result i32 i32) (block (br 1 (nop))) (br 0 (i32.const 1) (i32.const 2))))